(Format: Year/Month/Day)
Changes for 0.9.2:
*03/04/21:
   * Fix toolbar startup and reconfigure things (Simon)
     (Thanks Brian Sea)
     Screen.cc
*03/04/20:
   * Snap to Windows (and toolbar, slit + screen edge) (Simon)
     Window.hh/cc
   * Directional focus movement (key actions FocusUp/Down/Left/Right) (Simon)
     Keys.hh/cc Screen.hh/cc fluxbox.cc
   * Added transparent menus, session.screen<num>.menuAlpha (Henrik)
     Menu.hh/cc, Transparent.hh/cc, Screen.hh/cc
02/04/17:
   * Fixed menu bug (Henrik)
     Menu.cc, Screen.cc
   * Fixed saving of toolbar mode (Simon)
     ToolbarHandler.cc
--------------------------------------------------------------
Changes for 0.9.1:
*03/04/16:
   * Fixed resize bug (Henrik)
     Window.cc
   * Fixed saving of some other slit params - placement, direction, 
     autohide (Simon)
     Screen.hh/cc Slit.hh/cc fluxbox.cc
   * Fixed saving of toolbar and slit layer (Simon)
     LayerMenu.hh Screen.hh Slit.hh/cc Toolbar.hh/cc ToolbarHandler.hh 
     Window.cc
   * Fixed toolbar width percent menu item (Henrik)
     Toolbar.cc
   * Fixed current focused client button rendered (Henrik)
     FbWinFrame.hh/cc, Window.cc
   * Applied click raises patch (Thanks Dale P. Smith)
     Screen.hh/cc, Window.cc
*03/04/15:
   * Fixed y offset bug on ConfigureRequestEvent (Henrik)
     Window.cc
   * Fixed ConfigureNotify bug (Henrik)
     Window.cc/hh
   * Added drag and drop support for tabs (Henrik)
     Window.hh/cc
   * Fixed client and icon count in Ewmh (Henrik)
     Ewmh.cc
   * Cleaning (Henrik)
     fluxbox.hh/cc, FbAtoms.hh/cc, IconBar.hh/cc, WinClient.cc
	 Window.cc, Screen.hh/cc, Toolbar.hh/cc, FbCommands.cc, 
	 Workspace.cc, Gnome.cc
   * Add most recently used/stacked window cycling, set as default (Simon)
     Thanks also to Sean Seefried for his initial patch.
     Window.cc Screen.hh/cc fluxbox.hh/cc Keys.hh/cc     
*03/04/14:
   * merged embedded-tab-branch into main branch (Henrik)