@@ -1,5 +1,9 @@
 (Format: Year/Month/Day)
 Changes for 0.9.2:
+*03/04/25:
+   * Add UnderMousePlacement policy, plus minor positioning fix (Simon)
+     -> Patch originally contributed by "Mike" (lgn@users.sf)
+     Screen.hh Workspace.cc fluxbox.cc Window.cc
 *03/04/21:
    * Fix toolbar startup and reconfigure things (Simon)
      (Thanks Brian Sea)
